--- a/index.html/index.html
+++ b/index.html/index.html
@@ -49,7 +49,7 @@
     <header class="bg-blue-500 text-white py-4 sticky-header">
         <div class="container mx-auto flex items-center justify-between">
             <div class="flex items-center space-x-4">
-                <img src="/453985264_1285059912876764_4611514459330101557_n.png" alt="Icono" class="h-8 w-8 header-icon">
+                <img src="/recursos/453985264_1285059912876764_4611514459330101557_n.png" alt="Icono" class="h-8 w-8 header-icon">
                 <div>
                     <h1 class="text-2xl font-bold">Jackeline Zenosain</h1>
                     <p>Psicopedagoga</p>
@@ -68,7 +68,7 @@
     <section id="sobremi" class="container mx-auto py-12 px-4 md:px-8">
         <h2 class="text-3xl font-bold mb-6 section-title text-center">Lic Jackeline Zenosain</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-            <img src="/WhatsApp Image 2025-02-25 at 13.38.13.jpeg" alt="Foto de la psicopedagoga" class="rounded-lg shadow-md mx-auto">
+            <img src="/recursos/WhatsApp Image 2025-02-25 at 13.38.13.jpeg" alt="Foto de la psicopedagoga" class="rounded-lg shadow-md mx-auto">
             <div>
                 <p class="text-gray-700 mb-4">
                     Soy Jackeline Zenosain, psicopedagoga y terapeuta familiar. Me especializo en:
