--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psicope.Salud - Jackeline Zenosain</title>
-    <link rel="icon" href="/453985264_1285059912876764_4611514459330101557_n.png" type="image/png">
+    <link rel="icon" href="/image/453985264_1285059912876764_4611514459330101557_n.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body class="bg-gray-100 font-sans">
 
@@ -15,7 +15,7 @@
     <header class="bg-blue-500 text-white py-4 sticky-header">
         <div class="container mx-auto flex items-center justify-between">
             <div class="flex items-center space-x-4">
-                <img src="/453985264_1285059912876764_4611514459330101557_n.png" alt="Icono" class="h-8 w-8 header-icon">
+                <img src="/image/453985264_1285059912876764_4611514459330101557_n.png" alt="Icono" class="h-8 w-8 header-icon">
                 <div>
                     <h1 class="text-2xl font-bold">Jackeline Zenosain</h1>
                     <p>Psicopedagoga</p>
@@ -34,7 +34,7 @@
     <section id="sobremi" class="container mx-auto py-12 px-4 md:px-8">
         <h2 class="text-3xl font-bold mb-6 section-title text-center">Lic Jackeline Zenosain</h2>
         <div class="flex flex-col md:flex-row items-center md:items-start md:space-x-8">
-            <img src="/WhatsApp Image 2025-02-25 at 13.38.13.jpeg" alt="Foto de la psicopedagoga" class="h-32 w-32 sobre-mi-icon mx-auto md:mx-0">
+            <img src="/image/WhatsApp Image 2025-02-25 at 13.38.13.jpeg" alt="Foto de la psicopedagoga" class="h-32 w-32 sobre-mi-icon mx-auto md:mx-0">
             <div class="mt-8 md:mt-0">
                 <p class="text-gray-700 mb-4">
                     Soy Jackeline Zenosain, psicopedagoga y terapeuta familiar. Me especializo en:
