--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psicope.Salud - Jackeline Zenosain</title>
+    <meta name="description" content="Psicope.Salud - Servicios de psicopedagogía y terapia familiar por Jackeline Zenosain.">
+    <meta name="keywords" content="psicopedagogía, terapia familiar, Jackeline Zenosain, evaluación psicopedagógica, tratamientos psicopedagógicos, orientación vocacional">
+    <meta name="author" content="Jackeline Zenosain">
     <link rel="icon" href="/image/453985264_1285059912876764_4611514459330101557_n.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
