✨ Update header and section titles for branding consistency

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -152,7 +152,7 @@ body {
             <div class="flex items-center space-x-4">
                 <img src="https://lh3.googleusercontent.com/pw/AP1GczM5slBg6xr8eYTVDGz6Yf93e4jqbN-riuorM_StQDV098cCLwfyfAu_HXszvqd-Du6R53k6jo5QdQ2p9wYwOYfLrIk2Vm4hAMS4CoWFaKO_CD2MwA=w2400" alt="Icono" class="h-8 w-8 header-icon">
                 <div>
-                    <h1 class="text-2xl font-bold">Jackeline Zenosain</h1>
+                    <h1 class="text-2xl font-bold">Psicope.Salud</h1>
                     <p>Psicopedagoga</p>
                 </div>
             </div>
@@ -160,7 +160,7 @@ body {
                 <a href="#" class="hover:text-gray-200">Inicio</a>
                 <a href="#sobremi" class="hover:text-gray-200">Sobre mí</a>
                 <a href="#servicios" class="hover:text-gray-200">Servicios</a>
-                <a href="#contacto" class="bg-green-500 hover:bg-green-700 py-2 px-4 rounded">Contacto</a>
+                <a href="#contacto" class="bg-green-500 hover:bg-green-700 py-2 px-4 rounded">Turno</a>
             </nav>
             <div class="mobile-menu-button md:hidden">
                 <button onclick="toggleMobileMenu()">☰</button>
@@ -176,7 +176,7 @@ body {
 
     <!-- Sección "Sobre mí" -->
     <section id="sobremi" class="container mx-auto py-12 px-4 md:px-8">
-        <h2 class="text-3xl font-bold mb-6 section-title text-center">Lic Jackeline Zenosain</h2>
+        <h2 class="text-3xl font-bold mb-6 section-title text-center">Lic. Jackeline Zenosain</h2>
         <div class="flex flex-col md:flex-row items-center md:items-start md:space-x-8">
             <img src="https://lh3.googleusercontent.com/pw/AP1GczNoZXUtFTTpzOjf-JsSiaZmokLCKg7u0MXYRfrf5QfViR_HrucUBSrG4rgGIIglRZnQyHgucG_HzcNGKRplf4_AG_h3xbkAH-cszJ1ormy_LnDMlA=w2400" alt="Foto de la psicopedagoga" class="h-80 w-80 md:w-96 md:h-96 sobre-mi-icon mx-auto md:mx-0">
             <div class="mt-8 md:mt-0">
