✨ Update WhatsApp contact link text for clarity

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -305,7 +305,7 @@ body {
                     <li><i class="fas fa-envelope mr-2"></i>Email: psicopesalud@gmail.com</li>
                 </ul>
                 <a href="https://wa.me/5493516426035?text=Me%20gustaría%20ponerme%20en%20contacto" class="bg-green-500 hover:bg-green-700 text-white py-2 px-4 rounded mt-4 inline-block">
-                    Contáctame por WhatsApp
+                    turno por WhatsApp
                 </a>
             </div>
         </div>
