✨ Refactor header icon styles for improved responsiveness

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -72,7 +72,7 @@ body {
     .container {
         padding: 0 2rem;
     }
-    .header-icon, .sobre-mi-icon {
+    .header-icon {
         width: 60px;
         height: 60px;
     }
@@ -92,7 +92,7 @@ body {
     .container {
         padding: 0 1rem;
     }
-    .header-icon, .sobre-mi-icon {
+    .header-icon {
         width: 50px;
         height: 50px;
     }
@@ -115,7 +115,7 @@ body {
 }
 
 @media (max-width: 480px) {
-    .header-icon, .sobre-mi-icon {
+    .header-icon {
         width: 40px;
         height: 40px;
     }
@@ -150,7 +150,7 @@ body {
     <header class="bg-blue-500 text-white py-4 sticky-header">
         <div class="container mx-auto flex items-center justify-between">
             <div class="flex items-center space-x-4">
-                <img src="https://lh3.googleusercontent.com/pw/AP1GczM5slBg6xr8eYTVDGz6Yf93e4jqbN-riuorM_StQDV098cCLwfyfAu_HXszvqd-Du6R53k6jo5QdQ2p9wYwOYfLrIk2Vm4hAMS4CoWFaKO_CD2MwA=w2400" alt="Icono" class="h-8 w-8 header-icon">
+                <img src="https://lh3.googleusercontent.com/pw/AP1GczM5slBg6xr8eYTVDGz6Yf93e4jqbN-riuorM_StQDV098cCLwfyfAu_HXszvqd-Du6R53k6jo5QdQ2p9wYwOYfLrIk2Vm4hAMS4CoWFaKO_CD2MwA=w2400" alt="Icono" class="h-8 w-8 md:h-12 md:w-12 header-icon">
                 <div>
                     <h1 class="text-2xl font-bold">Psicope.Salud</h1>
                     <p>Psicopedagoga</p>
